Fix Tooltip z-index

--- a/src/components/Tooltip/Tooltip.module.css
+++ b/src/components/Tooltip/Tooltip.module.css
@@ -7,6 +7,7 @@
     margin: 0;
     padding: 0;
     pointer-events: none;
+    z-index: 100;
 }
 
 .tooltip_show {
